--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
 		"start": "nodemon ./bin/www"
 	},
 	"dependencies": {
+		"bcrypt": "^4.0.1",
+		"connect-flash": "^0.1.1",
 		"cookie-parser": "~1.4.4",
 		"debug": "~2.6.9",
 		"ejs": "^3.1.2",
