--- a/package.json
+++ b/package.json
@@ -8,12 +8,15 @@
 	"dependencies": {
 		"bcrypt": "^4.0.1",
 		"connect-flash": "^0.1.1",
+		"connect-mongo": "^3.2.0",
 		"cookie-parser": "~1.4.4",
 		"debug": "~2.6.9",
 		"ejs": "^3.1.2",
 		"express": "^4.16.4",
+		"express-session": "^1.17.1",
 		"http-errors": "~1.6.3",
 		"jade": "~1.11.0",
+		"mongo-store": "0.0.2",
 		"mongoose": "^5.9.12",
 		"morgan": "~1.9.1"
 	}
